spacing fix for fixed footer

--- a/global.css
+++ b/global.css
@@ -22,7 +22,7 @@ Caption: .caption
 }
 
 /* CONTEXT DIVS 
-Header: .header
+Header: .header, .logo-wrapper, .menu-wrapper
 Footer: .footer, .icon-wrapper, .contact-icon, .spacer
 
 Baisc Wrapper: .wrapper
@@ -44,7 +44,7 @@ Image/caption:
 .logo-wrapper{
     width: 150px;
     margin-top: 50px;
-    margin-left: 40px;
+    margin-left: 10%;
     margin-bottom: auto;
     float: left;
 }
@@ -53,7 +53,7 @@ Image/caption:
     width: 50px;
     height: 50px;
     margin-top: 50px;
-    margin-right: 40px;
+    margin-right: 10%;
     margin-bottom: auto;
     float: right;
 }
